# modumakea

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  render.yaml  subcircuit1.kicad_sch
config/: thresholds.json
docs/: ai-analyze-contract.md  ai-analyze-request.example.json  ai-review-erd.md  ai-review-schema.sql  beta-backlog-checklist.md  beta-data-and-security.md  beta-feedback-form-template.md  beta-golden-corpus-protocol.md  beta-import-rendering-ux-gate.md  beta-quality-baseline.md  beta-release-checklist.md  beta-risk-register.md  beta-sample-projects.md  beta-test-runbook.md  clean-kicad-dataset-quality-triage.md  clean-kicad-golden-corpus-agent-review.md  clean-kicad-golden-corpus-v1.md  compile-abuse-quota-retention-policy.md  compile-production-deployment-spec.md  components_master_schema.sql  core-engine-change-rules.md  current-status-report-2026-06-28.md  datasheet-analysis.md  datasheet-registry.md  design-alignment.md  diy-maker-smart-linter-implementation-plan.md  drc-audit-reality-check.md  flash-guide.md  getting-started.md  imported-kicad-clean-room-rearchitecture.md  imported-review-only-reset.md  imported-schematic-scene-svg-refactor.md  imported-schematic-stabilization-status.md  imported-structure-recognition-spec.md  integrated-circuit-model-column-map.md  integrated-circuit-model.example.json  kicad-fidelity-test-spec.md  (+32 more)
ml/: dataset.py  (+20 more)
rust/modumake-kernel/: Cargo.toml
rust/modumake-kernel/src/: lib.rs
(+785 files in other folders)
