[package]
name = "modumake-kernel"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM kernel boundary for ModuMake circuit solving and lightweight C++ AST extraction"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
